k8s/gloo/37-apiserver-envoy-configmap.yaml
---
# Source: gloo-ee/templates/37-apiserver-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: default-apiserver-envoy-config
  namespace: gloo-system
  labels:
    app: gloo
    gloo: apiserver-ui
data:
  config.yaml: |-
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 8080
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: gloo-webgrpc
                virtual_hosts:
                - name: gloo-webgrpc
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                      headers:
                      - name: content-type
                        prefix_match: application/grpc
                    route:
                      cluster: gloo-grpcserver
                      timeout: 15s
                  - match:
                      prefix: "/"
                    route:
                      cluster: gloo-ui
                      timeout: 15s
                  cors:
                    allow_origin_string_match:
                    - safe_regex:
                        google_re2: {}
                        regex: \*
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                    max_age: "1728000"
                    expose_headers: grpc-status,grpc-message
                    filter_enabled: # the values 100/HUNDRED are the default. Still, we want to explicitly define them until we know that the envoy we are using conforms to the new api
                      default_value:
                        numerator: 100
                        denominator: HUNDRED
              http_filters:
              - name: envoy.filters.http.grpc_web
              - name: envoy.filters.http.cors
              - name: envoy.filters.http.router
      clusters:
      - name: gloo-grpcserver
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        load_assignment:
          cluster_name: gloo-grpcserver
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 10101
      - name: gloo-ui
        connect_timeout: 0.25s
        type: static
        lb_policy: round_robin
        load_assignment:
          cluster_name: gloo-ui
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 20202
      - name: admin_port_cluster
        connect_timeout: 5.000s
        type: STATIC
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: admin_port_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 19000
    admin:
      access_log_path: /dev/null
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19000
